test/type_errors/cases/ppx_sync_nonstring.ml
let x = [%eta.sync 123]
